--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,8 @@ name = "field-offset"
 version = "0.1.0"
 authors = ["Diggory Blake <diggsey@googlemail.com>"]
 description = "Safe pointer-to-member implementation"
+repository = "https://github.com/Diggsey/rust-field-offset"
+readme = "README.md"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
