--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+memoffset = "0.5.4"
 
 [build-dependencies]
 rustc_version = "0.2.3"
