--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-memoffset = "0.9"
+memoffset = { version = "0.9", features = ["unstable_offset_of"] }
 
 [build-dependencies]
 rustc_version = "0.4.0"
